# EvilC

./: .clang-format  .gitignore  ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  ErrorReporter.cpp  ErrorReporter.h  Platform.cpp  backend.cpp  backend.h  file_utils.cpp  file_utils.h  lexer.cpp  lexer.h  main.cpp  platform.h  platform_macos.cpp  platform_macos.h  platform_windows.cpp  platform_windows.h  token.h
tests/: CMakeLists.txt
tests/e2e/: CMakeLists.txt  e2e_config.py  run_e2e_tests.py  test_inputs.in  test_lex_error.in  test_specify_output_name.in
tests/unittests/: CMakeLists.txt  test_argument_parser.cpp  test_generating_executable.cpp  test_lexer.cpp  test_smoke.cpp
